// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeSeries updateTimeSeries() interpolates an existing TimeSeries with a new "y" vector. 1`] = `
Array [
  Object {
    "t": 1970-10-01T00:00:00.000Z,
    "y": 1.2,
  },
  Object {
    "t": 1970-10-31T18:00:00.000Z,
    "y": 1.2,
  },
  Object {
    "t": 1970-12-01T12:00:00.000Z,
    "y": 1.2,
  },
  Object {
    "t": 1971-01-01T06:00:00.000Z,
    "y": 1.2,
  },
  Object {
    "t": 1971-02-01T00:00:00.000Z,
    "y": 1.2,
  },
]
`;

exports[`TimeSeries updateTimeSeries() interpolates an existing TimeSeries with a new TimeRange. 1`] = `
Array [
  Object {
    "t": 1970-10-06T00:00:00.000Z,
    "y": 1.2,
  },
  Object {
    "t": 1970-12-01T12:00:00.000Z,
    "y": 1.2,
  },
  Object {
    "t": 1971-01-27T00:00:00.000Z,
    "y": 1.2,
  },
]
`;
